add room with rxjava

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,13 @@ dependencies {
     // location
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
+    // room
+    implementation 'androidx.room:room-runtime:2.2.5'
+    kapt 'androidx.room:room-compiler:2.2.5'
+    implementation 'androidx.room:room-ktx:2.2.5'
+    implementation 'androidx.room:room-rxjava2:2.2.5'
+
+
 
 
     // testing
