--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,10 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.2.5'
     implementation 'androidx.room:room-rxjava2:2.2.5'
 
+    // worker
+    implementation 'androidx.work:work-runtime-ktx:2.3.4'
+    implementation 'androidx.work:work-rxjava2:2.3.4'
+
 
 
 
